--- a/Музыка больших городов.ipynb
+++ b/Музыка больших городов.ipynb
@@ -88,6 +88,13 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "svd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -2744,7 +2751,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.12"
   },
   "toc": {
    "base_numbering": 1,
